--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <div class="navbar-brand"><%= link_to "InstaCloud", posts_path %> </div>
+      <div class="navbar-brand"><%= link_to "DropBox", posts_path %> </div>
     </div>
   </div>
 
@@ -45,11 +45,11 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "shit", posts_path %></li>
+              <li><%= link_to "Users", users_path %></li>
               <li><a href="#">Another action</a></li>
               <li><a href="#">Something else here</a></li>
               <li role="separator" class="divider"></li>
-              <li><%= link_to "Log out",  logout_path %></li>
+              <li><%= link_to "Log out", logout_path, method: "delete" %></li>
             </ul>
           </li>
         </ul>
