--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,7 @@
 <div class="post">
   <div class="post-head">
     <div class="head">
-      <%= link_to post.user.username, "/" %>
+      <%= link_to post.user.username, post.user %>
       <div class="image center-block">
         <%= link_to image_tag(post.image.url(:medium), border: 0), post_path(post), { class: "img-responsive "}%>
         <div class="text-left"><%= post.caption %></div>
