--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,43 +1,48 @@
-<%= form_for(user) do |f| %>
-    <% if user.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<%= form_for(@user) do |f| %>
+    <% @form_obj = @user %>
+    <%= render 'shared/error_messages', object: @form_obj %>
 
-          <ul>
-            <% user.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-          </ul>
-        </div>
-    <% end %>
-
-    <div class="field">
+    <!-- Username -->
+    <div class="form-group">
       <%= f.label :username %>
-      <%= f.text_field :username %>
+      <div class="col-lg-10">
+        <%= f.text_field :username, class: 'form-control',:placeholder=>"username" %>
+      </div>
     </div>
 
-    <div class="field">
+    <div class="form-group">
       <%= f.label :email %>
-      <%= f.text_field :email %>
+      <div class="col-lg-10">
+        <%= f.text_field :email, class: 'form-control',:placeholder=>"email" %>
+      </div>
     </div>
 
-    <div class="field">
-      <%= f.label :privilege %>
-      <%= f.text_field :privilege %>
-    </div>
-
-    <div class="field">
+    <!-- Password -->
+    <div class="form-group">
       <%= f.label :password %>
-      <%= f.text_field :password %>
+      <div class="col-lg-10">
+        <%= f.password_field :password, class: 'form-control' ,:placeholder=>"Minimum 6 characters"%>
+      </div>
     </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation %>
-      <%= f.text_field :password_confirmation %>
+    <!-- Password Confirm -->
+    <div class="form-group">
+      <%= f.label :password_confirmation, "Confirm Password" %>
+      <div class="col-lg-10">
+        <%= f.password_field :password_confirmation, class: 'form-control',:placeholder=>"Minimum 6 characters"%>
+      </div>
     </div>
 
 
-    <div class="actions">
-      <%= f.submit %>
+    <div class="form-group">
+      <%= f.label :privilege, "Define Privilege" %>
+      <div class="col-lg-10">
+        <div class="form-group">
+          <%= f.select :privilege, User.privileges.keys.to_a , { :prompt => 'Select One' }, { class: "form-control", :id => "select" } %>
+        </div>
+      </div>
     </div>
+
+
+    <%= f.submit yield(:button_text), class: "btn btn-primary" %>
 <% end %>
