--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,33 +1,17 @@
-<p id="notice"><%= notice %></p>
+<% provide(:title, 'All Users') %>
 
-<h1>Users</h1>
+<div class="center jumbotron">
+  <h1>Users</h1>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Username</th>
-      <th>Email</th>
-      <th>Privilege</th>
-      <th>Password</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div><% if is_admin? %>
+      <%= link_to "Create New Account", new_user_path, :class => "btn btn-primary" %>
+  <% end %></div>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.username %></td>
-        <td><%= user.email %></td>
-        <td><%= user.privilege %></td>
-        <td><%= user.password %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= will_paginate %>
 
-<br>
+<ul class="users">
+  <%= render @users %>
+</ul>
 
-<%= link_to 'New User', new_user_path %>
+<%= will_paginate %>
