Created neat table to display users index

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -6,7 +6,7 @@
     <div class="form-group">
       <%= f.label :username %>
       <div class="col-lg-10">
-        <%= f.text_field :username, class: 'form-control',:placeholder=>"username" %>
+        <%= f.text_field :username, class: 'form-control',:placeholder=>"user" %>
       </div>
     </div>
 
@@ -42,6 +42,7 @@
         </div>
       </div>
     </div>
+
 
 
     <%= f.submit yield(:button_text), class: "btn btn-primary" %>
