--- a/app/views/users/_deactivateuserform.html.erb
+++ b/app/views/users/_deactivateuserform.html.erb
@@ -1,3 +1,3 @@
 <%= form_for(user) do |f| %>
-      <%= f.submit "Delete User", data: {confirm: 'Are you sure?'}, class: 'btn btn-primary btn-xs' %>
+      <%= link_to "Delete User", user_path(user), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-primary btn-xs' %>
 <% end %>
