--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,12 +1,15 @@
-<div class="post">
-  <div class="post-head">
-    <div class="head">
-      <%= link_to post.user.username, post.user %>
-      <div class="image center-block">
-        <%= link_to image_tag(post.image.url(:medium), border: 0), post_path(post), { class: "img-responsive "}%>
-        <div class="text-left"><%= post.caption %></div>
+<div class="posts-wrapper row">
+  <div class="post">
+    <div class="post-head">
+      <div class="name">
+        <%= link_to post.user.username, post.user %>
       </div>
+    </div>
+    <div class="image center-block">
+      <%= link_to image_tag(post.image.url(:medium), border: 0), post_path(post), { class: "img-responsive "}%>
+    </div>
+    <div class="caption">
+      <%= post.caption %>
     </div>
   </div>
 </div>
-
