--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,65 +1,53 @@
-<nav class="navbar navbar-default">
+<nav class="nav navbar navbar-default">
   <div class="navbar-container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+      <button type="button" class="btn navbar-toggle collapsed" data-toggle="collapse"
               data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
       </button>
-      <div class="navbar-brand"><%= link_to "DropBox", posts_path %> </div>
+      <div class="navbar-brand">
+        <%= link_to "DropBox", posts_path %>
+      </div>
     </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-left">
+        <% if logged_in? %>
+            <li><%= link_to "New Post", new_post_path %></li>
+        <% end %>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if logged_in? %>
+            <div class="search navbar-form navbar-right">
+            <%= form_for posts_path, :method => 'get' do |f| %>
+                <%= text_field_tag :search, params[:search], :placeholder => "Search", class: "form-control" %>
+                <%= f.submit "Search", class: "form-control btn btn-default" %>
+                <% end %>
+            </div>
+
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Users", users_path %></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+              </ul>
+            </li>
+        <% else %>
+            <div class="navbar-form navbar-right">
+              <%= link_to "Sign up", new_user_path %> |
+              <%= link_to "Log in", login_path %>
+            </div>
+        <% end %>
+      </ul>
+
+
+    </div><!-- /.navbar-collapse -->
   </div>
-
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-      <% if logged_in? %>
-          <li class="active"><%= link_to "New Post", new_post_path %></li>
-      <% end %>
-      <!--<li class="dropdown">-->
-      <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
-      <!--<ul class="dropdown-menu">-->
-      <!--<li><a href="#">Action</a></li>-->
-      <!--<li><a href="#">Another action</a></li>-->
-      <!--<li><a href="#">Something else here</a></li>-->
-      <!--<li role="separator" class="divider"></li>-->
-      <!--<li><a href="#">Separated link</a></li>-->
-      <!--<li role="separator" class="divider"></li>-->
-      <!--<li><a href="#">One more separated link</a></li>-->
-      <!--</ul>-->
-      <!--</li>-->
-    </ul>
-
-    <% if logged_in? %>
-
-        <div class="search navbar-form navbar-right">
-          <%= form_for posts_path, :method => 'get' do |f| %>
-              <%= text_field_tag :search, params[:search], :placeholder => "Search", class: "form-control" %>
-              <%= f.submit "Search", class: "btn btn-default" %>
-          <% end %>
-        </div>
-
-        <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Users", users_path %></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><%= link_to "Log out", logout_path, method: "delete" %></li>
-            </ul>
-          </li>
-        </ul>
-    <% else %>
-        <div class="search navbar-form navbar-right">
-          <%= link_to "Sign up", new_user_path %> |
-          <%= link_to "Log in", login_path %>
-        </div>
-    <% end %>
-
-  </div><!-- /.navbar-collapse -->
 
 </nav>
