--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,10 +10,12 @@
   <%= @user.email %>
 </p>
 
-<p>
-  <strong>Privilege:</strong>
-  <%= @user.privilege %>
-</p>
+<% if is_admin? %>
+    <p>
+      <strong>Privilege:</strong>
+      <%= @user.privilege %>
+    </p>
+<% end %>
 
 
 <%= render @posts %>
