--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -4,8 +4,8 @@
   </div>
 
   <div class="comment-form col-sm-11">
-    <%= simple_form_for [post, post.comments.new] do |f| %>
-        <%= f.text_field :content, placeholder: "Add a comment..." %>
+    <%= simple_form_for [post, post.comments.new], remote: true do |f| %>
+        <%= f.text_field :content, placeholder: "Add a comment...", class:"comment_content", id: "comment_content_#{post.id}" %>
     <% end %>
   </div>
 </div>
