--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -6,7 +6,7 @@
     <%= comment.content %>
   </div>
   <% if comment.user == current_user %>
-      <%= link_to post_comment_path(post, comment), method: :delete, remote: true do %>
+      <%= link_to post_comment_path(post, comment), method: :delete, remote: true, id: "delete-#{comment.id}", class: "delete-comment" do %>
           <span class="glyphicon glyphicon-remove delete-comment"></span>
       <% end %>
   <% end %>
