--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,7 +29,7 @@
             </div>
 
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" id="dropdownAccount" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account<span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" id="drop_down_account" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Users", users_path %></li>
                 <li><a href="#">Another action</a></li>
