pretty up user form

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,49 +1,28 @@
-<%= form_for(@user) do |f| %>
-    <% @form_obj = @user %>
-    <%= render 'shared/error_messages', object: @form_obj %>
+<div class="registration-big">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4">
+        <div class="log-in panel">
+          <div class="panel-heading">
+            <h2>Create Your Account</h2>
+          </div>
+          <%= form_for(@user) do |f| %>
+              <% @form_obj = @user %>
+              <%= render 'shared/error_messages', object: @form_obj %>
 
-    <!-- Username -->
-    <div class="form-group">
-      <%= f.label :username %>
-      <div class="col-lg-10">
-        <%= f.text_field :username, class: 'form-control',:placeholder=>"user" %>
-      </div>
-    </div>
+              <div class="panel-body">
 
-    <div class="form-group">
-      <%= f.label :email %>
-      <div class="col-lg-10">
-        <%= f.text_field :email, class: 'form-control',:placeholder=>"email" %>
-      </div>
-    </div>
+                <%= f.text_field :username, label: false, required: true, autofocus: true, :placeholder=>"Username", class: "input-lg" %>
+                <%= f.text_field :email, label: false, required: true, :placeholder=>"Email", class: "input-lg" %>
+                <%= f.password_field :password, label: false, required: true, :placeholder=>"Minimum 6 characters", class: "input-lg"%>
+                <%= f.password_field :password_confirmation, label: false, required: true, :placeholder=>"Minimum 6 characters", class: "input-lg"%>
+                <%= f.select :privilege, User.privileges.keys.to_a , { :prompt => 'Select One' }, { class: "input-lg", :id => "select" } %> <br></br>
 
-    <!-- Password -->
-    <div class="form-group">
-      <%= f.label :password %>
-      <div class="col-lg-10">
-        <%= f.password_field :password, class: 'form-control' ,:placeholder=>"Minimum 6 characters"%>
-      </div>
-    </div>
-
-    <!-- Password Confirm -->
-    <div class="form-group">
-      <%= f.label :password_confirmation, "Confirm Password" %>
-      <div class="col-lg-10">
-        <%= f.password_field :password_confirmation, class: 'form-control',:placeholder=>"Minimum 6 characters"%>
-      </div>
-    </div>
-
-
-    <div class="form-group">
-      <%= f.label :privilege, "Define Privilege" %>
-      <div class="col-lg-10">
-        <div class="form-group">
-          <%= f.select :privilege, User.privileges.keys.to_a , { :prompt => 'Select One' }, { class: "form-control", :id => "select" } %>
+                <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+          <% end %>
+          </div>
         </div>
       </div>
     </div>
-
-
-
-    <%= f.submit yield(:button_text), class: "btn btn-primary" %>
-<% end %>
+  </div>
+</div>
