--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,2 +1,5 @@
-<%= image_tag(@post.image.url(:medium), border: 0, class: "text-center")%>
-<%= render 'edit_form' %>
+<%= render 'form' %>
+<div class="text-center edit-links">
+  <%= link_to 'Delete Post', post_path(@post), method: :delete, data: { confirm: 'Are you sure you want to delete this post?'} %>
+  | <%= link_to 'Cancel', posts_path %>
+</div>
