--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
 <%= render @post %>
 
+<%= link_to 'Home', posts_path %>
 <% if current_user_owns_post? %>
-    <%= link_to 'Edit', edit_post_path(@post) %> |
-    <%= link_to 'Delete Post', post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete?" } %> |
+   | <%= link_to 'Edit', edit_post_path(@post) %> |
+    <%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" } %>
 <% end %>
 
-<%= link_to 'Home', posts_path %>
