--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,4 @@
-<h1>Editing User</h1>
-
 <% provide(:button_text, 'Update') %>
-<%= render 'form', user: @user %>
+<%= render 'edit_user_form', user: @user %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Show', @user %>
