--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
   <%= @user.email %>
 </p>
 
-<% if is_admin? %>
+<% if is_admin? || current_user?(current_user)%>
     <p>
       <strong>Privilege:</strong>
       <%= @user.privilege %>
@@ -21,5 +21,6 @@
 <%= render @posts %>
 
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<% if is_admin? || current_user?(@user) %>
+    <%= link_to 'Edit', edit_user_path(@user) %>
+<% end %>
