--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,6 +1,7 @@
 <div class="comment-like-form row">
   <div class="like-button col-sm-1">
-    <span class="glyphicon glyphicon-heart-empty")></span>
+    <%= link_to '', like_post_path(post.id), remote: true, id: "id_#{post.id}", class: 'glyphicon glyphicon-heart-empty' %>
+    <!--<span class="glyphicon glyphicon-heart-empty")></span>-->
   </div>
 
   <div class="comment-form col-sm-11">
