--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -14,6 +14,7 @@
       <%= link_to image_tag(post.image.url(:medium), border: 0), post_path(post), { class: "img-responsive "}%>
     </div>
     <div class="post-bottom">
+      <%= render 'posts/likes', post: post %>
       <div class="caption">
         <div class="caption-content">
           <div class="user-name">
