--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -43,7 +43,7 @@ html {
 .login-bg {
   padding-top: 4em;
   height: 100%;
-  background-image: image-url('loginbg.jpg');
+  //background-image: image-url('loginbg.jpg');
   -moz-background-size: cover;
   -webkit-background-size: cover;
   -o-background-size: cover;
