--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,6 +1,6 @@
 <div class="comment-like-form row">
   <div class="like-button col-sm-1">
-    <%= link_to '', (user_liked_post?(post) ? unlike_post_path(post.id) : like_post_path(post.id)), remote: true, id: "like_#{post.id}", class: "glyphicon #{liked_post post}" %>
+    <%= link_to '', (user_liked_post?(post) ? unlike_post_path(post.id) : like_post_path(post.id)), remote: true, id: "like_#{post.id}", class: "glyphicon like #{liked_post post}" %>
   </div>
 
   <div class="comment-form col-sm-11">
