--- a/app/views/assets/_form.html.erb
+++ b/app/views/assets/_form.html.erb
@@ -1,11 +1,6 @@
-<%= simple_form_for(@asset, :html => { class: 'form-horizontal', multipart: true } ) do |f| %>
-    <%= f.error_notification %>
+<%= simple_form_for [user, user.assets.new], :html => { multipart: true } do |f| %>
 
-  <div class="form-inputs">
-    <%= f.input :uploaded_file %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, input_html: { class: "btn btn-block" } %>
-  </div>
+      <%= f.input :filename, class: 'form-inputs' %>
+      <%= f.input :uploaded_file, class: 'form-inputs' %>
+      <%= f.submit "fuck", class: "btn btn-success form-actions" %>
 <% end %>
