--- a/app/views/assets/edit.html.erb
+++ b/app/views/assets/edit.html.erb
@@ -1,6 +1,9 @@
 <h1>Editing Asset</h1>
 
-<%= render 'form', asset: @asset %>
+<%= render 'edit_form', user: @user, asset: @asset %>
+<div class="text-center edit-links">
+  <%= link_to 'Show', user_asset_path(@asset) %> |
+  <%= link_to 'Back', user_assets_path %>
+</div>
 
-<%= link_to 'Show', @asset %> |
-<%= link_to 'Back', assets_path %>
+
