--- a/app/views/assets/index.html.erb
+++ b/app/views/assets/index.html.erb
@@ -1,22 +1,23 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Assets</h1>
+<h1>Files</h1>
 
 <table>
   <thead>
     <tr>
-      <th>User</th>
+      <th><%= @user.username %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
+  <br>
 
   <tbody>
     <% @assets.each do |asset| %>
       <tr>
-        <td><%= asset.user_id %></td>
-        <td><%= link_to 'Show', asset %></td>
-        <td><%= link_to 'Edit', edit_asset_path(asset) %></td>
-        <td><%= link_to 'Destroy', asset, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= asset.filename %></td>
+        <td><%= link_to 'Show', user_asset_path(@user, asset) %></td>
+        <td><%= link_to 'Edit', edit_user_asset_path(@user, asset) %></td>
+        <td><%= link_to 'Destroy', user_asset_path(@user, asset), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New Asset', new_asset_path %>
+<%= link_to 'New Asset', new_user_asset_path %>
