--- a/app/views/assets/show.html.erb
+++ b/app/views/assets/show.html.erb
@@ -5,5 +5,5 @@
   <%= @asset.user_id %>
 </p>
 
-<%= link_to 'Edit', edit_asset_path(@asset) %> |
-<%= link_to 'Back', assets_path %>
+<%= link_to 'Edit', edit_user_asset_path(@asset) %> |
+<%= link_to 'Back', user_assets_path %>
