make table for index, allow multiple mime types through

--- a/app/views/assets/_edit_form.html.erb
+++ b/app/views/assets/_edit_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for [user, asset], :html => { multipart: true } do |f| %>
 
-    <%= f.input :filename, class: 'form-inputs' %>
-    <%= f.submit "Submit", class: "btn btn-success form-actions" %>
+    <%= f.input :custom_name, class: 'form-inputs' %>
+    <br>
+    <%= f.submit "Submit", class: "btn btn-success form-actions btn-lg" %>
 <% end %>
