--- a/app/views/assets/edit.html.erb
+++ b/app/views/assets/edit.html.erb
@@ -1,5 +1,10 @@
-<h1>Editing Asset</h1>
+<div class="text-center">
+  <h1>Editing File</h1>
+</div>
 
+<br>
+<br>
+<br>
 <%= render 'edit_form', user: @user, asset: @asset %>
 <div class="text-center edit-links">
   <%= link_to 'Show', user_asset_path(@asset) %> |
