--- a/app/views/assets/_form.html.erb
+++ b/app/views/assets/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [user, user.assets.new], :html => { multipart: true } do |f| %>
 
-      <%= f.input :filename, class: 'form-inputs' %>
+      <%= f.input :custom_name, class: 'form-inputs' %>
       <%= f.input :uploaded_file, class: 'form-inputs' %>
-      <%= f.submit "fuck", class: "btn btn-success form-actions" %>
+      <%= f.submit "Upload", class: "btn btn-success form-actions" %>
 <% end %>
