--- a/app/views/assets/index.html.erb
+++ b/app/views/assets/index.html.erb
@@ -1,28 +1,27 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Files</h1>
+<%= link_to 'Upload File', new_user_asset_path, class: 'pull-right btn-lg' %>
 
-<table>
+
+<table class="table table-striped table-hover">
   <thead>
-    <tr>
-      <th><%= @user.username %></th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Name</th>
+    <th>Filename</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
   </thead>
-  <br>
 
   <tbody>
-    <% @assets.each do |asset| %>
-      <tr>
-        <td><%= asset.filename %></td>
-        <td><%= link_to 'Show', user_asset_path(@user, asset) %></td>
-        <td><%= link_to 'Edit', edit_user_asset_path(@user, asset) %></td>
-        <td><%= link_to 'Destroy', user_asset_path(@user, asset), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+    <%= render @assets %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Asset', new_user_asset_path %>
+
+
+
