--- a/app/views/assets/_edit_form.html.erb
+++ b/app/views/assets/_edit_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for [user, asset], :html => { multipart: true } do |f| %>
 
     <%= f.input :custom_name, class: 'form-inputs' %>
+    <%= f.input :description, class: 'form-inputs' %>
     <br>
     <%= f.submit "Submit", class: "btn btn-success form-actions btn-lg" %>
 <% end %>
