--- a/app/views/assets/_form.html.erb
+++ b/app/views/assets/_form.html.erb
@@ -1,6 +1,13 @@
 <%= simple_form_for [user, user.assets.new], :html => { multipart: true } do |f| %>
 
+
+    <fieldset>
       <%= f.input :custom_name, class: 'form-inputs' %>
+      <%= f.input :description, class: 'form-inputs' %>
       <%= f.input :uploaded_file, class: 'form-inputs' %>
+      <br>
       <%= f.submit "Upload", class: "btn btn-success form-actions" %>
+
+    </fieldset>
+
 <% end %>
