Allow files to be downloaded

--- a/app/views/assets/_asset.html.erb
+++ b/app/views/assets/_asset.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td><%= asset.custom_name %></td>
-  <td><%= asset.filename %></td>
+  <td><%= link_to asset.filename, user_download_path(@user, asset) %></td>
   <!--<td><%= link_to 'Show', user_asset_path(@user, asset) %></td>-->
   <td><%= asset.description %></td>
   <td><%= link_to 'Edit', edit_user_asset_path(@user, asset) %></td>
