Add security checks to protect user files

--- a/app/views/assets/index.html.erb
+++ b/app/views/assets/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Files</h1>
+<div class="text-center">
+  <h1>Files</h1>
+</div>
 <%= link_to 'Upload File', new_user_asset_path, class: 'pull-right btn-lg' %>
 
 
