--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,7 +20,7 @@
                 <div class="form-group">
                   <%= f.label :caption, class: "col-lg-2 control-label" %>
                   <div class="col-lg-10 control-label">
-                    <%= f.input :caption, label: false, placeholder: 'Add your caption', class: 'form-control' %>
+                    <%= f.input :caption, label: fals, placeholder: 'Add your caption', class: 'form-control' %>
                   </div>
                 </div>
                 <br>
