--- a/app/views/assets/index.html.erb
+++ b/app/views/assets/index.html.erb
@@ -5,29 +5,5 @@
 <%= link_to 'Upload File', new_user_asset_path, class: 'pull-right btn-lg' %>
 
 
-<table class="table table-striped table-hover">
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Filename</th>
-    <th>Description</th>
-    <th></th>
-    <th></th>
-  </tr>
-  </thead>
-
-  <tbody>
-    <%= render @assets %>
-  </tbody>
-</table>
-
-<br>
-
-<div class="text-center">
-  <%= will_paginate %>
-</div>
-
-
-
-
+<%= render 'asset_table' %>
 
