--- a/app/views/assets/show.html.erb
+++ b/app/views/assets/show.html.erb
@@ -6,7 +6,8 @@
 <br>
 
 <div class="text-center">
-    <strong>User: <%= @user.username %></strong>
+  <strong>User: <%= @user.username %></strong>
+  <p>File Name: <%= @asset.filename %></p>
 
 </div>
 
