Allow users to share assets

--- a/app/views/assets/_shared_asset.html.erb
+++ b/app/views/assets/_shared_asset.html.erb
@@ -1,8 +1,8 @@
 <tr>
+  <td><%= link_to @user.username, user_path(@user) %></td>
   <td><%= link_to asset.custom_name, user_asset_path(@user, asset) %></td>
   <td><%= link_to asset.filename, user_download_path(@user, asset) %></td>
   <!--<td><%= link_to 'Show', user_asset_path(@user, asset) %></td>-->
   <td><%= asset.description %></td>
-  <td><%= link_to 'Edit', edit_user_asset_path(@user, asset) %></td>
   <td><%= link_to 'Delete', user_asset_path(@user, asset), method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
