--- a/app/views/assets/index.html.erb
+++ b/app/views/assets/index.html.erb
@@ -4,6 +4,23 @@
 </div>
 <%= link_to 'Upload File', new_user_asset_path, class: 'pull-right btn-lg' %>
 
+<ul class="nav nav-tabs">
+  <% if is_admin? || current_user?(@user)%>
+      <li class="active"><a href="#assets" data-toggle="tab">My Files</a></li>
+      <li><a href="#sharedwithme" data-toggle="tab">Shared with Me</a></li>
+  <% end %>
+</ul>
 
-<%= render 'asset_table' %>
+<div id="myTabContent" class="tab-content">
+
+  <div class="tab-pane fade active in" id="assets">
+    <br>
+    <%= render 'assets/asset_table' %>
+  </div>
+
+  <div class="tab-pane fade" id="sharedwithme">
+    <br>
+    <%= render 'assets/shared_with_me' %>
+  </div>
+</div>
 
