--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,17 +18,12 @@
         <% if logged_in? %>
             <li><%= link_to "New Post", new_post_path %></li>
             <li><%= link_to "New File", new_user_asset_path(current_user)%></li>
-        <% end %>
+      <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <% if logged_in? %>
-            <div class="search navbar-form navbar-right">
-            <%= form_for posts_path, :method => 'get' do |f| %>
-                <%= text_field_tag :search, params[:search], :placeholder => "Search", class: "form-control" %>
-                <%= f.submit "Search", class: "form-control btn btn-default" %>
-                <% end %>
-            </div>
 
+        <% if logged_in? %>
+            <li><%= link_to current_user.username, user_path(current_user.id) %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" id="drop_down_account" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account<span class="caret"></span></a>
               <ul class="dropdown-menu">
