adding friends shit, fixed downloading own file bug

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,12 +14,14 @@
     <tr>
       <th>Username</th>
       <th>Email</th>
-      <th>Privilege</th>
-      <th>Delete</th>
+      <% if is_admin? %>
+          <th>Privilege</th>
+          <th>Delete</th>
+      <% end %>
     </tr>
     </thead>
     <tbody>
-       <%= render @users %>
+    <%= render @users %>
     </tbody>
   </table>
 </ul>
