--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,6 +29,7 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "Users", users_path %></li>
                 <li><%= link_to "Files", user_assets_path(current_user) %></li>
+                <li><%= link_to "Friends", user_friends_path(current_user) %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to "My Account", user_path(current_user) %></li>
                 <li><%= link_to "Log out", logout_path, method: "delete" %></li>
