fix pg duplicate keys bugs using set

--- a/app/views/assets/show.html.erb
+++ b/app/views/assets/show.html.erb
@@ -11,8 +11,8 @@
 <br>
 <br>
 
-<p>  Custom Name: <%= @asset.custom_name %><br>
-  File Name: <%= link_to @asset.filename %>
+<p><strong>Name:</strong> <%= @asset.custom_name %><br>
+  <strong>Filename:</strong> : <%= link_to @asset.filename %>
 </p>
 
 <div class="search">
