Add add and remove friend btutons

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -10,8 +10,16 @@
       <td>
         <%= user.privilege %>
       </td>
+
+  <% end %>
+  <% if current_user.is_friends_with?(user) %>
+      <td><%= link_to "Remove Friend", remove_friend_user_path(user.id), method: :delete, class: 'btn btn-primary btn-xs' %></td>
+  <% else %>
+      <td><%= link_to "Add Friend", add_friend_user_path(user.id), method: :post, class: 'btn btn-primary btn-xs' %></td>
+  <% end %>
+  <% if is_admin? && !current_user?(user) %>
       <td>
-      <%= render 'deactivateuserform', user: user %>
+        <%= render 'deactivateuserform', user: user %>
       </td>
   <% end %>
 
