--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,10 +4,12 @@
 <div class="row">
   <strong>Username: </strong>
   <%= @user.username %>
-  <% if current_user.is_friends_with?(@user) %>
-      <td><%= link_to "Remove Friend", remove_friend_user_path(@user.id), method: :delete, class: 'btn btn-primary btn-xs pull-right' %></td>
-  <% else %>
-      <td><%= link_to "Add Friend", add_friend_user_path(@user.id), method: :post, class: 'btn btn-primary btn-xs pull-right' %></td>
+  <% if !current_user?(@user) %>
+      <% if current_user.is_friends_with?(@user) %>
+          <td><%= link_to "Remove Friend", remove_friend_user_path(@user.id), method: :delete, class: 'btn btn-primary btn-xs pull-right' %></td>
+      <% else %>
+          <td><%= link_to "Add Friend", add_friend_user_path(@user.id), method: :post, class: 'btn btn-primary btn-xs pull-right' %></td>
+      <% end %>
   <% end %>
 </div>
 
